feat: no memory filters